<resources>
    <string name="app_name">Mindful Bell</string>
    <string name="title_home">Home</string>
    <string name="title_timer">Meditation Timer</string>
    <string name="title_settings">Settings</string>
    <string name="enable_disable_tv_text">Enable/Disable</string>
    <string name="silent_notification_tv_text">Silent notification</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chip_text_enabled">Enabled</string>
    <string name="chip_text_favourite">Favourite</string>
    <string name="description_edit_reminder">Edit Reminder</string>
    <string name="description_add_new_reminder">Add new reminder</string>
    <string name="lbl_reminders">Reminders</string>
    <string name="lbl_schedules">Schedules</string>
    <string name="lbl_every">Every</string>
    <string name="lbl_about">About</string>
    <string name="lbl_audio_channel">Audio channel</string>
    <string name="lbl_bell">Bell</string>
    <string name="description_next">next</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>