<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.waesh.mindfulbell.view.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_set_timer"
        android:name="com.waesh.mindfulbell.view.fragment.TimerSetFragment"
        android:label="@string/title_timer"
        tools:layout="@layout/fragment_timer_set"/>

    <fragment
        android:id="@+id/navigation_app_settings"
        android:name="com.waesh.mindfulbell.view.fragment.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_app_settings" >
        <action
            android:id="@+id/action_navigation_app_settings_to_remindersFragment"
            app:destination="@id/remindersFragment"
            app:popUpTo="@id/navigation_app_settings" />
    </fragment>
    <fragment
        android:id="@+id/remindersFragment"
        android:name="com.waesh.mindfulbell.view.fragment.RemindersFragment"
        android:label="Reminders"
        tools:layout="@layout/fragment_reminders" />
</navigation>